--- a/package.json
+++ b/package.json
@@ -3,12 +3,13 @@
     "version": "1.0.0",
     "scripts": {
         "ng": "ng",
-        "start": "ng serve --progress",
+        "start": "node server.js",
         "build": "ng build --prod",
         "gitbuild": "ng build --prod --base-href /start-javascript/sb-admin-material/master/dist/",
         "test": "ng test",
         "lint": "ng lint",
-        "e2e": "ng e2e"
+        "e2e": "ng e2e",
+        "postinstall": "ng build --aot --prod"
     },
     "private": true,
     "dependencies": {
@@ -29,21 +30,24 @@
         "@ngx-translate/http-loader": "^3.0.1",
         "chart.js": "^2.7.2",
         "core-js": "^2.5.4",
+        "express": "^4.16.3",
         "hammerjs": "^2.0.8",
         "ng2-charts": "^1.6.0",
+        "path": "^0.12.7",
         "rxjs": "^6.0.0",
         "web-animations-js": "^2.3.1",
         "zone.js": "^0.8.26"
     },
     "devDependencies": {
         "@angular-devkit/build-angular": "~0.6.0",
-        "@angular/cli": "~6.0.0",
-        "@angular/compiler-cli": "^6.0.0",
+        "@angular/cli": "^6.2.4",
+        "@angular/compiler-cli": "^6.1.9",
         "@angular/language-service": "^6.0.0",
         "@types/jasmine": "~2.8.6",
         "@types/jasminewd2": "~2.0.3",
         "@types/node": "~8.9.4",
         "codelyzer": "~4.2.1",
+        "enhanced-resolve": "^3.3.0",
         "jasmine-core": "~2.99.1",
         "jasmine-spec-reporter": "~4.2.1",
         "karma": "~1.7.1",
@@ -55,5 +59,9 @@
         "ts-node": "~5.0.1",
         "tslint": "~5.9.1",
         "typescript": "~2.7.2"
+    },
+    "engines": {
+        "node": "8.11.3",
+        "npm": "6.1.0"
     }
 }
