--- a/package.json
+++ b/package.json
@@ -1,14 +1,15 @@
 {
-    "name": "sb-admin-material",
+    "name": "rootstack-dev",
     "version": "1.0.0",
     "scripts": {
         "ng": "ng",
         "start": "node server.js",
         "build": "ng build --prod",
-        "gitbuild": "ng build --prod --base-href /start-javascript/sb-admin-material/master/dist/",
+        "gitbuild": "ng build --prod --base-href /start-javascript/rootstack-dev/master/dist/",
         "test": "ng test",
         "lint": "ng lint",
         "e2e": "ng e2e",
+        "preinstall": "npm install -g @angular/cli @angular/compiler-cli typescript",
         "postinstall": "ng build --aot --prod"
     },
     "private": true,
